# hw-2-mlds

./: HW2_Logistic_regression_Anton_Zaitsev.ipynb  README.md  pyproject.toml
